--- a/ansible/roles/common/tasks/base.yml
+++ b/ansible/roles/common/tasks/base.yml
@@ -1,6 +1,9 @@
 ---
 # - name: ensure ntpd is running and enabled
 #   service: name=ntpd enabled=yes state=started
+- name: Set timezone to Asia/Tokyo
+  community.general.timezone:
+    name: Asia/Kolkata
 
 - name: ensure uneccessary services are stopped and disabled
   service: name={{ item }} enabled=no state=stopped
